--- a/src/scss/theme/_other.scss
+++ b/src/scss/theme/_other.scss
@@ -189,3 +189,23 @@ body *::-webkit-scrollbar-thumb {
     }
   }
 }
+
+// swipeable
+.swipeable-form-container {
+  position: relative;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 0.7s ease;
+}
+
+.slide-in {
+  transform: translateX(0);
+}
+
+.slide-out {
+  transform: translateX(-200%);
+}
